--- a/MVC5Course/Views/Form/Edit.cshtml
+++ b/MVC5Course/Views/Form/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Product</h4>
         <hr />
@@ -24,7 +24,7 @@
 
                 @*@Html.TextBox("ProductName");*@
 
-                @Html.TextBoxFor(m => m.ProductName )
+                @Html.TextBoxFor(m => m.ProductName)
 
                 @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
             </div>
@@ -59,7 +59,18 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CreatedOn, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+
+
+                @*有以下3種方式利用View來控制日期
+                    @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                    @Html.TextBoxFor(model => model.CreatedOn,
+                        htmlAttributes: new { @class = "form-control", type = "date" })
+
+                    @Html.TextBox("CreatedOn", Model.CreatedOn.ToString("yyyy-MM-dd"), new { @class = "form-control", type = "date" })
+                *@
+
+
                 @Html.ValidationMessageFor(model => model.CreatedOn, "", new { @class = "text-danger" })
             </div>
         </div>
