--- a/MVC5Course/Views/Clients1/Index.cshtml
+++ b/MVC5Course/Views/Clients1/Index.cshtml
@@ -86,4 +86,9 @@
 
 @Html.PagedListPager(
  Model as IPagedList,
- (p) => Url.Action("Index", new { pageNo = p }))
+ (p) => Url.Action("Index"
+ , new {
+     pageNo = p,
+     CreditRatingFilter = Html.Value("CreditRatingFilter"),
+     LastNameFilter = Html.Value("LastNameFilter")
+ }))
