--- a/MVC5Course/Views/Clients1/Index.cshtml
+++ b/MVC5Course/Views/Clients1/Index.cshtml
@@ -4,6 +4,10 @@
 
 @{
     ViewBag.Title = "Index";
+    if (IsAjax)
+    {
+        Layout = "";
+    }
 }
 
 <h2>Index</h2>
@@ -84,11 +88,25 @@
 
 </table>
 
-@Html.PagedListPager(
+@*@Html.PagedListPager(
  Model as IPagedList,
  (p) => Url.Action("Index"
- , new {
+ , new
+ {
      pageNo = p,
      CreditRatingFilter = Html.Value("CreditRatingFilter"),
      LastNameFilter = Html.Value("LastNameFilter")
- }))
+ }))*@
+
+
+@*Ajax的用法*@
+@Html.PagedListPager(
+ Model as IPagedList,
+ (p) => Url.Action("Index"
+ , new
+ {
+     pageNo = p,
+     CreditRatingFilter = Html.Value("CreditRatingFilter"),
+     LastNameFilter = Html.Value("LastNameFilter")
+ }),
+     PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing("#Main"))
